talk2web3/rust/target/debug/build/crossbeam-utils-1d6525257a5910ce/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/8ede3aae28fe6e4d52b38157d7bfe0d3bceef225/library/core/src/sync/atomic.rs:2927:1
 ::: /rustc/8ede3aae28fe6e4d52b38157d7bfe0d3bceef225/library/core/src/sync/atomic.rs:2945:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0412`.
